Fix border style in mdl-align hover state

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -1089,7 +1089,7 @@ p.checklistwarning {
 .mdl-align a:hover{
   background-color: white;
   color: black;
-  border: var(--primary) solid;
+  border: 1px solid var(--primary);
   text-decoration: none;
 }
 
